--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "simplebar": "5.3.8",
+    "simplebar-react": "^3.2.0",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
